--- a/SinavSis/SinavSis/AnaMenu.resx
+++ b/SinavSis/SinavSis/AnaMenu.resx
@@ -117,4 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAADQSURBVEhLvZVBDsIwDATzQbjABX5fngFIYB8iWVbWTJqKkfbQdrfbpFbbEp+kWXAeGwU4j40C
+        nMdGAc5n49VEcW/OSzZTNL5MpMw97o1Zv5fkZMqBX2WjEj/2e5VcTE9TDL5Nd1NGeW8mBClbLulUZYeV
+        dNT+j86RoSkZPX3U0koyquzQEqcqGk3jLsjWLZf9ZRiqEVbXpldWlXSWy0hJZ3fZ2TS7/+o9lh/VhykH
+        yEselZW/iWh0zUySe3Nego0CnMdGAc5jowDnsVEg8q19Aewv8xMNLsuRAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
